Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntObjTextField.quorum
class Main
    Integer v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Integer
        text var = "text"
        return var
    end
end